<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4018.2">
  <DUT Name="structHBMSerialCtrl" Id="{c14d29c4-1683-4d46-839f-d799045b6a54}">
    <Declaration><![CDATA[TYPE structHBMSerialCtrl :
STRUCT
	In_Init:BOOL;
	In_Trigger:BOOL;
	
	Out_ReceiveDone:BOOL;
	Out_WeightResult:REAL;
	Out_InitOK:BOOL;	
	Out_ErrorWord:INT;
	Out_ErrorString:STRING;

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>